# ScorecardReg

./: PTSOC_2.py  README.md  main.py  pyproject.toml  requirements.txt
pages/: Registrar_Scorecard_📊.py
src/: app_streamlit.py
