[tool.poetry]
name = "using streamlit"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Etiane Marcelino <etianezaumarcelino@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
duckdb = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
